--- a/buildspec.yml
+++ b/buildspec.yml
@@ -48,10 +48,10 @@ phases:
   build:
     commands:
       - echo "Construyendo Docker image service-server"
-      - docker build --build-arg CERT_DIR=certs -t $ECR_REPO_SERVER -f grpc/Dockerfile.server grpc
+      - docker build --build-arg CERT_DIR=certs -t $ECR_REPO_SERVER:server -f grpc/Dockerfile.server grpc
       - docker tag $ECR_REPO_SERVER:server $REPO_URI_SERVER:server
       - echo "Construyendo Docker image service-client"
-      - docker build --build-arg CERT_DIR=certs -t $ECR_REPO_CLIENT -f grpc/Dockerfile.client grpc
+      - docker build --build-arg CERT_DIR=certs -t $ECR_REPO_CLIENT:client -f grpc/Dockerfile.client grpc
       - docker tag $ECR_REPO_CLIENT:client $REPO_URI_CLIENT:client
 
   post_build:
