--- a/grpc_demo/Dockerfile.client
+++ b/grpc_demo/Dockerfile.client
@@ -1,13 +1,13 @@
 FROM python:3.11-slim
 
 WORKDIR /app
+COPY grpc_demo/ grpc_demo/
 
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY client.py .
-COPY certs/ certs/
 
 # (Opcional) si tu client no necesita exponer puertos, puedes omitir EXPOSE
 
-CMD ["python", "client.py"]
+CMD ["python", "-m", "grpc_demo.client"]
+
