--- a/grpc_demo/Dockerfile.server
+++ b/grpc_demo/Dockerfile.server
@@ -4,15 +4,17 @@ FROM python:3.11-slim
 # 2) Directorio de trabajo
 WORKDIR /app
 
-# 3) Copiar requirements y código
-COPY requirements.txt .
+
+# copia únicamente el paquete
+COPY grpc_demo/ grpc_demo/
+
+# instala dependencias
+COPY grpc_demo/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY server.py .
-COPY certs/ certs/
 
-# 4) Exponer puerto gRPC (ajústalo si tu server escucha otro)
 EXPOSE 50051
 
 # 5) Comando por defecto
-CMD ["python", "server.py"]
+CMD ["python", "-m", "grpc_demo.server"]
+
