--- a/buildspec.yml
+++ b/buildspec.yml
@@ -29,7 +29,17 @@ phases:
       - rm -rf project
       - echo "Creando directorio para certificados"
       - mkdir -p grpc_demo/certs
- 
+      - echo " Login en Docker Hub…"
+      - echo $DOCKERHUB_PASSWORD \
+          | docker login --username gseguierho --password-stdin gkv1xnc.ate6UZX!cak
+      - echo " Login en ECR…"
+      - aws ecr get-login-password --region $AWS_DEFAULT_REGION \
+          | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
+      # (Opcional) crea el repositorio si no existe
+      - |
+        if ! aws ecr describe-repositories --repository-names $REPOSITORY_NAME >/dev/null 2>&1; then
+          aws ecr create-repository --repository-name $REPOSITORY_NAME
+        fi
       - echo "Login en Amazon ECR"
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
       - echo "Definiendo URIs de repositorios"
