--- a/grpc_demo/Dockerfile.server
+++ b/grpc_demo/Dockerfile.server
@@ -1,5 +1,6 @@
 # 1) Imagen base
-FROM python:3.11-slim
+FROM public.ecr.aws/docker/library/python:3.11-slim
+
 
 # 2) Directorio de trabajo
 WORKDIR /app
